[package]
name = "gldash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gldash"

[dependencies]
reqwest = { version = "^0.11", features = ["json", "blocking"] }
graphql_client = { version = "0.10.0", default-features = false, features = ["graphql_query_derive", "reqwest-blocking"] }
graphql_client_codegen = { version = "0.10.0" }
clap = { version = "^3.0", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
env_logger = "^0.6"
syn = "1.0"
anyhow = "1"
prettytable-rs = "^0.8"
